<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dreamcatcher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="wifi_password"> Password</string>
    <string name="wifi_input_pwd_hit">Please input the passwrod</string>
    <string name="wifi_write_tag">write</string>
    <string name="wifi_title">Select Wifi SSID</string>
    <string name="wifi_setting_title">Wifi Setting</string>
    <string name="wifi_no_pwd">No Password</string>
    <string name="wifi_wpa">WPA/WPA2</string>
    <string name="wifi_wep">WEP</string>
    <string name="select_title">Select NFC Item </string>
    <string name="main_wifi_write_txt">Wifi</string>
    <string name="main_wifi_url_txt">URL</string>
    <string name="noti_setting_title">NFC App</string>
    <string name="noti_wifi_setting_title">Wifi Setting success!</string>
    <string name="noti_wifi_open_wait">wifi open,wait</string>
    <string name="noti_wifi_opened">Wifi opened</string>
    <string name="noti_wifi_close_wait">wifi is close，wait open!</string>
    <string name="noti_wifi_write_success">write success</string>
    <string name="noti_wifi_write_fail">write fail</string>
    <string name="noti_setting_success">setting success</string>
    <string name="noti_parse_fail">parse data fail</string>
    <string name="noti_parse_wifi_fail">parse wifi action data error</string>
    <string name="noti_parse_nfc_fail">parse nfc action data error</string>
    <string name="nfc_write">Please tap the Dynamic Tag!</string>
    

</resources>