<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/wifi_ssid_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />

        <ImageView
            android:id="@+id/wifi_select_ssid_im"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/btn_research" />
    </LinearLayout>

    <Spinner
        android:id="@+id/wifi_select_safe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/panel_wifi_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi_password"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/wifi_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wifi_input_pwd_hit"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/bnt_write_wifi_tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifi_write_tag" />

</LinearLayout>